--- a/iiop-openjdk/src/main/resources/org/wildfly/iiop/openjdk/LocalDescriptions_fr.properties
+++ b/iiop-openjdk/src/main/resources/org/wildfly/iiop/openjdk/LocalDescriptions_fr.properties
@@ -11,6 +11,11 @@ iiop-openjdk.ssl-socket-binding=Le nom de la configuration du \u00ABsocket bindi
 iiop-openjdk.high-water-mark=Param\u00E8tre de cache de connexion TCP. Chaque fois que le nombre de connexions d\u00E9passe cette valeur, ORB essaie de r\u00E9cup\u00E9rer les connexions. Le nombre de connexions r\u00E9cup\u00E9r\u00E9es est sp\u00E9cifi\u00E9e par la propri\u00E9t\u00E9 tcp-number-to-reclaim. Si cette propri\u00E9t\u00E9 n'est pas d\u00E9finie, elle est configur\u00E9e \u00E0 OpenJDK ORB par d\u00E9faut.
 iiop-openjdk.number-to-reclaim=Param\u00E8tre de cache de connexion TCP. Chaque fois que le nombre de connexions d\u00E9passe la valeur de la propri\u00E9t\u00E9 tcp-high-water-mark, ORB essaie de r\u00E9cup\u00E9rer les connexions. Le nombre de connexions r\u00E9cup\u00E9r\u00E9es est sp\u00E9cifi\u00E9 par cette propri\u00E9t\u00E9. Si cette propri\u00E9t\u00E9 n'est pas d\u00E9finie, elle est configur\u00E9e \u00E0 OpenJDK ORB par d\u00E9faut.
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-jacorb/org/jboss/as/jacorb/LocalDescriptions, author croe@redhat.com
+iiop-openjdk.security=Indique si les intercepteurs de s\u00E9curit\u00E9 doivent \u00EAtre install\u00E9s (client, identit\u00E9, elytron) ou non (off).
+iiop-openjdk.authentication-context=Le nom du contexte d'authentification utilis\u00E9 quand l'initialisateur est d\u00E9fini sur elytron.
+# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-jacorb/org/jboss/as/jacorb/LocalDescriptions, author croe@redhat.com
+iiop-openjdk.transactions=Indique si les intercepteurs de transactions doivent \u00EAtre install\u00E9s (full ou spec) ou non (off). La valeur 'full' active le JTS tandis que 'spec' active un mode compatible spec (non JTS) qui rej\u00E8te les contextes de transactions entrants.  
+# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-jacorb/org/jboss/as/jacorb/LocalDescriptions, author croe@redhat.com
 iiop-openjdk.root-context=Le contexte root du service de nommage.
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-jacorb/org/jboss/as/jacorb/LocalDescriptions, author croe@redhat.com
 iiop-openjdk.export-corbaloc=Indique si le contexte root doit \u00EAtre export\u00E9 comme corbaloc\:\:address\:port/NameService (on) ou non (off).
@@ -18,22 +23,37 @@ iiop-openjdk.export-corbaloc=Indique si le contexte root doit \u00EAtre export\u
 iiop-openjdk.support-ssl=Indique si SSL doit \u00EAtre support\u00E9 (on) ou non (off)
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-jacorb/org/jboss/as/jacorb/LocalDescriptions, author croe@redhat.com
 iiop-openjdk.security-domain=Le nom du domaine de s\u00E9curit\u00E9 qui contient les cl\u00E9s et trust stores qui seront utilis\u00E9s pour \u00E9tablir les connexions SSL.
+iiop-openjdk.server-ssl-context=Le nom du contexte SSL utilis\u00E9 pour cr\u00E9er des sockets SSL c\u00F4t\u00E9 serveur.
+iiop-openjdk.client-ssl-context=Le nom du contexte SSL utilis\u00E9 pour cr\u00E9er des sockets SSL c\u00F4t\u00E9 client.
+iiop-openjdk.client-requires-ssl=Indique si les connections IIOP venant du serveur ont besoin de SSL.
+iiop-openjdk.server-requires-ssl=Indique si les connections IIOP allant au serveur ont besoin de SSL.
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-jacorb/org/jboss/as/jacorb/LocalDescriptions, author croe@redhat.com
 iiop-openjdk.add-component-via-interceptor=Indique si les composants SSL doivent \u00EAtre ajout\u00E9s par un intercepteur IOR (on) ou non (off).
+iiop-openjdk.add-component-via-interceptor.deprecated=Indique si les composants SSL doivent \u00EAtre ajout\u00E9s par un intercepteur IOR (on) ou non (off).
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-jacorb/org/jboss/as/jacorb/LocalDescriptions, author croe@redhat.com
 iiop-openjdk.client-supports=Valeur qui indique les param\u00E8tres qui sont support\u00E9s par le client SSL (None, ServerAuth, ClientAuth, MutualAuth).
+iiop-openjdk.client-supports.deprecated=Utiliser client-requires-ssl \u00E0 la place.
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-jacorb/org/jboss/as/jacorb/LocalDescriptions, author croe@redhat.com
 iiop-openjdk.client-requires=Valeur qui indique les param\u00E8tres qui sont requis par le client SSL (None, ServerAuth, ClientAuth, MutualAuth).
+iiop-openjdk.client-requires.deprecated=Utiliser client-requires-ssl \u00E0 la place.
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-jacorb/org/jboss/as/jacorb/LocalDescriptions, author croe@redhat.com
 iiop-openjdk.server-supports=Valeur qui indique les param\u00E8tres qui sont support\u00E9s par le serveur SSL (None, ServerAuth, ClientAuth, MutualAuth).
+iiop-openjdk.server-supports.deprecated=Utiliser server-requires-ssl \u00E0 la place.
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-jacorb/org/jboss/as/jacorb/LocalDescriptions, author croe@redhat.com
 iiop-openjdk.server-requires=Valeur qui indique les param\u00E8tres qui sont requis par le serveur SSL (None, ServerAuth, ClientAuth, MutualAuth).
+iiop-openjdk.server-requires.deprecated=Utiliser server-requires-ssl \u00E0 la place.
 iiop-openjdk.trust-in-client=Indique si le transport n\u00E9cessite un contrat de confiance avec le client ou non. Les valeurs qui conviennent sont 'none', 'supported' et 'required'.
+iiop-openjdk.trust-in-client.deprecated=Utiliser server-requires-ssl \u00E0 la place.
 iiop-openjdk.trust-in-target=Indique si le transport n\u00E9cessite un contrat de confiance avec la clible ou non. Les valeurs qui conviennent sont 'none' et 'supported'.
+iiop-openjdk.trust-in-target.deprecated=Utiliser server-requires-ssl \u00E0 la place.
 iiop-openjdk.integrity=Indique si le transport n\u00E9cessite une protection d'int\u00E9grit\u00E9 ou non. Les valeurs qui conviennent sont 'none', 'supported' et 'required'.
+iiop-openjdk.integrity.deprecated=Utiliser server-requires-ssl \u00E0 la place.
 iiop-openjdk.confidentiality=Indique si le transport n\u00E9cessite une protection de confidentialit\u00E9 ou non. Les valeurs qui conviennent sont 'none', 'supported' et 'required'.
+iiop-openjdk.confidentiality.deprecated=Utiliser server-requires-ssl \u00E0 la place.
 iiop-openjdk.detect-replay=Indique si le transport n\u00E9cessite une d\u00E9tection de rediffusion ou non. Les valeurs qui conviennent sont 'none', 'supported' et 'required'.
+iiop-openjdk.detect-replay.deprecated=Utiliser server-requires-ssl \u00E0 la place.
 iiop-openjdk.detect-misordering=Indique si le transport n\u00E9cessite une d\u00E9tection de faute d'ordonnancement ou non. Les valeurs qui conviennent sont 'none', 'supported' et 'required'.
+iiop-openjdk.detect-misordering.deprecated=Utiliser server-requires-ssl \u00E0 la place.
 iiop-openjdk.ior-settings.as-context=Param\u00E8tre de contexte AS (Authentication Service).
 iiop-openjdk.auth-method=M\u00E9thode d'authentification. Les valeurs valides sont 'none' et 'username_password'.
 iiop-openjdk.realm=Nom de domaine du service d'authentification (AS).
