--- a/jaxrs/src/main/resources/org/jboss/as/jaxrs/logging/JaxrsLogger.i18n_fr.properties
+++ b/jaxrs/src/main/resources/org/jboss/as/jaxrs/logging/JaxrsLogger.i18n_fr.properties
@@ -23,3 +23,5 @@ invalidParamValue=Valeur non valide pour le param\u00E8tre %s \: %s
 noSpringIntegrationJar=Pas de jar Spring d'int\u00E9gration trouv\u00E9 
 disablePropertyDeprecated=Le param de contecte org.jboss.as.jaxrs.disableSpringIntegration est d\u00E9pr\u00E9ci\u00E9, et devra \u00EAtre supprim\u00E9 dans une prochaine version. Veuillez utiliser org.jboss.as.jaxrs.enableSpringIntegration \u00E0 la place.
 failedToRegisterManagementViewForRESTResources=N'a pas pu enregistrer la vue de gestion de la classe de ressource REST\:\u00A0%s
+noServletDeclaration=Aucune d\u00E9claration de servlet n'a \u00E9t\u00E9 trouv\u00E9e pour l'application JAX-RS. %s procure une classe qui \u00E9tend javax.ws.rs.cre.Application ou qui d\u00E9clare une classe de servlet dans web.xml.
+resteasyVersion=RESTEasy version %s
