--- a/mail/src/main/resources/org/jboss/as/mail/extension/LocalDescriptions_fr.properties
+++ b/mail/src/main/resources/org/jboss/as/mail/extension/LocalDescriptions_fr.properties
@@ -33,3 +33,8 @@ mail.mail-session.server.password=Mot de passe pour s'authentifier sur le serveu
 mail.mail-session.server.name=Nom du type de serveur
 mail.mail-session.custom=Personnaliser la configuration du serveur mail
 mail.mail-session.server.properties=Propri\u00E9t\u00E9s JavaMail
+mail.mail-session.server.credential-reference=Identifiants (du Store d'identifiants) pour s'authentifier sur le serveur
+mail.mail-session.server.credential-reference.store=Le nom du store d'identifiants d\u00E9tenant l'alias du l'identifiant
+mail.mail-session.server.credential-reference.type=Le type d'identifiant \u00E0 laquelle cette r\u00E9f\u00E9rence se rapporte
+mail.mail-session.server.credential-reference.alias=L'alias d\u00E9notant un secret ou un identifiant stock\u00E9 dans le store  
+mail.mail-session.server.credential-reference.clear-text=Le secret indiqu\u00E9 en texte clair (v\u00E9rifier la fa\u00E7on dont les store d'identifiants fournissent les identifiants/secrets aux services).
