--- a/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions_fr.properties
+++ b/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions_fr.properties
@@ -273,7 +273,6 @@ connection-factory.pre-acknowledge=True pour un Pr\u00E9-Accus\u00E9-R\u00E9cept
 connection-factory.producer-max-rate=Le taux max du producteur.
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-messaging/org/jboss/as/messaging/LocalDescriptions, author croe@redhat.com
 connection-factory.producer-window-size=La taille de fen\u00EAtre du producteur.
-connection-factory.protocol-manager-factory=La fabrique du gestionnaire de protocole utilis\u00E9e par la fabrique de connexions.
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-messaging/org/jboss/as/messaging/LocalDescriptions, author croe@redhat.com
 connection-factory.reconnect-attempts=Les tentatives de reconnexion.
 connection-factory.remove-jndi.jndi-binding=La liaison Jndi
@@ -308,6 +307,7 @@ connector.add.params=Un ensemble de paires key-value comprises par la classe de 
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-messaging/org/jboss/as/messaging/LocalDescriptions, author croe@redhat.com
 connector.add=Op\u00E9ration d'ajout d'un connecteur
 connector.endpoint=Le http-acceptor qui sert de point de terminaison au http-connector.
+connector.server-name=Le nom du serveur ArtemisMQ qui sera connect\u00E9 sur le serveur distant. Si non d\u00E9fini, le nom du serveur ActiveMQ Artemis parent sera utilis\u00E9 (conviendra si le connecteur http est utilis\u00E9 pour connecter au serveur parent)
 connector.factory-class=Nom de classe de la classe de la fabrique qui peut instancier le connecteur.
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-messaging/org/jboss/as/messaging/LocalDescriptions, author croe@redhat.com
 connector.params=Une paire key-value comprise par la classe de fabrique (factory-class) du connecteur et utilis\u00E9e pour la configurer.
