--- a/transactions/src/main/resources/org/jboss/as/txn/logging/TransactionLogger.i18n_fr.properties
+++ b/transactions/src/main/resources/org/jboss/as/txn/logging/TransactionLogger.i18n_fr.properties
@@ -40,3 +40,4 @@ indexedChildResourceRegistrationNotAvailable=Les ressources enfants index\u00E9e
 unsupportedAttribute=L'attribut \u00AB\u00A0%s\u00A0\u00BB n'est plus pris en charge
 mustBeDefinedIfTrue=%s doit \u00EAtre d\u00E9fini si %s est sur 'true'.
 onlyOneCanBeTrue=Un seul %s ou %s peut \u00EAtre sur 'true'.
+objectStoreRelativeToIsSetToDefault=relative_to property de l' object-store est d\u00E9fini \u00E0 la valeur par d\u00E9faut avec jboss.server.data.dir
