--- a/undertow/src/main/resources/org/wildfly/extension/undertow/LocalDescriptions_fr.properties
+++ b/undertow/src/main/resources/org/wildfly/extension/undertow/LocalDescriptions_fr.properties
@@ -87,11 +87,25 @@ undertow.access-log.relative-to=Le r\u00E9pertoire du chemin est relatif \u00E0
 undertow.access-log.extended=Indique si le journal utilise le format de fichier de journalisation \u00E9tendu
 undertow.access-log.predicate=Pr\u00E9dicat qui d\u00E9termine si la requ\u00EAte doit \u00EAtre journalis\u00E9e
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-web/org/jboss/as/web/LocalDescriptions, author samfreemanz
+undertow.single-sign-on=Une configuration de m\u00E9canisme d'authentification SSO
+# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-web/org/jboss/as/web/LocalDescriptions, author samfreemanz
+undertow.single-sign-on.add=Ajoute un m\u00E9canisme de configuration SSO
+# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-web/org/jboss/as/web/LocalDescriptions, author samfreemanz
+undertow.single-sign-on.remove=Supprime le m\u00E9canisme d'authentification SSO.
+# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-web/org/jboss/as/web/LocalDescriptions, author samfreemanz
 undertow.single-sign-on.domain=Domaine cookie qui sera utilis\u00E9.
 undertow.single-sign-on.path=Chemin de cookie.
 undertow.single-sign-on.http-only=D\u00E9finit l'attribut de cookie httpOnly.
 undertow.single-sign-on.secure=D\u00E9finit l'attribut de cookie s\u00E9curis\u00E9e.
 undertow.single-sign-on.cookie-name=Nom du cookie
+undertow.single-sign-on.key-store=Une r\u00E9f\u00E9rence \u00E0 un key store contenant une cl\u00E9 priv\u00E9e.
+undertow.single-sign-on.key-alias=Alias de la cl\u00E9 priv\u00E9e utilis\u00E9e pour signer et v\u00E9rifier la connexion de d\u00E9connexion back-channel
+undertow.single-sign-on.credential-reference=La r\u00E9f\u00E9rence d'identifiant pour d\u00E9crypter l'entr\u00E9e de cl\u00E9 priv\u00E9e.
+undertow.single-sign-on.credential-reference.store=Le nom du store d'identifiants d\u00E9tenant l'alias du l'identifiant.
+undertow.single-sign-on.credential-reference.alias=L'alias d\u00E9notant un secret ou un identifiant stock\u00E9 dans le store.  
+undertow.single-sign-on.credential-reference.type=Le type d'identifiant que cette r\u00E9f\u00E9rence d\u00E9note.
+undertow.single-sign-on.credential-reference.clear-text=Le secret indiqu\u00E9 en texte clair. V\u00E9rifier la fa\u00E7on dont les store d'identifiants fournissent les identifiants/secrets aux services.
+undertow.single-sign-on.client-ssl-context=R\u00E9f\u00E9rence au conteste SSL utilis\u00E9 pour s\u00E9curiser la connexion de d\u00E9connexion back-channel
 undertow.listener=\u00E9couteur http
 undertow.listener.add=Ajoute \u00E9couteur
 undertow.listener.remove=Nom de l'\u00E9couteur
@@ -119,6 +133,7 @@ undertow.listener.verify-client=Le mode d'authentification du client SSL d\u00E9
 undertow.listener.verify-client.deprecated=Quand un contexte SSL est r\u00E9f\u00E9renc\u00E9, il doit \u00EAtre configur\u00E9 directement dans le mode de v\u00E9rification du client demand\u00E9.
 undertow.listener.always-set-keep-alive=Si d\u00E9fini sur true, alors un en-t\u00EAte Connection\: keep-alive sera ajout\u00E9 aux r\u00E9ponses, m\u00EAme si cela n'est pas strictement exig\u00E9 par la sp\u00E9cification.
 undertow.listener.redirect-socket=Si cet \u00E9couteur supporte des requ\u00EAtes non-SSL, et qu'une requ\u00EAte est re\u00E7ue avec une <security-constraint> n\u00E9cessitant un transport SSL, Undertow redirigera la requ\u00EAte directement au port de liaison de socket sp\u00E9cifi\u00E9 ici.
+undertow.listener.proxy-address-forwarding=Active la gestion de l'en-t\u00EAte de x-forwarded-host (et autres en-t\u00EAtes x-forwarder-*) et utilise ces informations d'en-t\u00EAtes pour d\u00E9finir l'adresse distante. Doit uniquement \u00EAtre utilis\u00E9 avec un serveur proxy de confiance d\u00E9finissant ces en-t\u00EAtes, sinon un utilisateur distant pourrait usurper leurs adresses IP.
 undertow.listener.enabled-cipher-suites=Configure Ciphers SSL activ\u00E9
 undertow.listener.enabled-cipher-suites.deprecated=Quand un contexte SSL est r\u00E9f\u00E9renc\u00E9, il doit \u00EAtre configur\u00E9 dans les suites chiffr\u00E9es qui seront prises en charge.
 undertow.listener.enabled-protocols=Configure Protocoles SSL
@@ -160,6 +175,7 @@ undertow.listener.http2-max-concurrent-streams=Le nombre de flux HTTP/2 pouvant 
 undertow.listener.http2-max-header-list-size=La taille maximale d'en-t\u00EAtes de requ\u00EAtes que le serveur est pr\u00EAt \u00E0 accepter.
 undertow.listener.http2-initial-window-size=La taille de fen\u00EAtre de contr\u00F4le de flux qui contr\u00F4le la vitesse \u00E0 laquelle le client peut envoyer des donn\u00E9es au serveur
 undertow.listener.http2-header-table-size=La taille de la table d'en-t\u00EAtes utilis\u00E9s pour la compression HPACK, en octets. Ce montant de m\u00E9moire sera allou\u00E9 par connexion de compression. Les plus grandes valeurs utilisent un plus grand montant de m\u00E9moire, mais assurent une meilleure compression.
+undertow.listener.require-host-http11=Requiert l'en-t\u00EAte d'h\u00F4te quand on utilise le protocole HTTP/1.1, suivant la sp\u00E9cification RFC. Si la requ\u00EAte n'inclut pas d'en-t\u00EAte, elle sera rejet\u00E9e avec une erreur 403. 
 undertow.host=Un h\u00F4te Undertow
 undertow.host.add=Ajoute un nouvel h\u00F4te
 undertow.host.remove=Supprime un h\u00F4te
@@ -345,8 +361,9 @@ undertow.application-security-domain.add=Ajoute un nouveau mappage de domaine de
 undertow.application-security-domain.remove=Supprime le mappage de domaine de s\u00E9curit\u00E9 r\u00E9f\u00E9renc\u00E9 par une application.
 undertow.application-security-domain.http-authentication-factory=La fabrique d'authentifications HTTP qui doit \u00EAtre utilis\u00E9e par les d\u00E9ploiements qui r\u00E9f\u00E9rencent le domaine de s\u00E9curit\u00E9 mapp\u00E9.
 undertow.application-security-domain.override-deployment-config=Est-ce que la configuration d'authentification doit \u00EAtre remplac\u00E9e par la fabrique dans le d\u00E9ploiement\u00A0?
+undertow.application-security-domain.enable-jacc=Activer l'autorisation par JACC
 undertow.application-security-domain.referencing-deployments=Les d\u00E9ploiements qui r\u00E9f\u00E9rencent ce mappage actuellement.
-undertow.deployment=Un d\u00E9ploiement
+undertow.application-security-domain.setting=Configuration
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-web/org/jboss/as/web/LocalDescriptions, author croe@redhat.com
 undertow.deployment.context-root=Le contexte racine de l'application web
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-web/org/jboss/as/web/LocalDescriptions, author croe@redhat.com
@@ -368,7 +385,6 @@ undertow.deployment.duplicated-session-ids=Nombre d'ID de sessions en double g\u
 undertow.deployment.session-avg-alive-time=Dur\u00E9e moyenne (en secondes) pendant laquelle des sessions expir\u00E9es ont pu \u00EAtre live
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-web/org/jboss/as/web/LocalDescriptions, author croe@redhat.com
 undertow.deployment.session-max-alive-time=Dur\u00E9e maximum (en secondes) pendant laquelle des sessions expir\u00E9es ont pu \u00EAtre live
-undertow.deployment.servlet=Servlet
 undertow.deployment.servlet.servlet-name=Nom du servlet
 undertow.deployment.servlet.servlet-class=Classe du servlet
 undertow.deployment.servlet.min-request-time=Temps minimal de traitement d'une requ\u00EAte
@@ -376,7 +392,6 @@ undertow.deployment.servlet.max-request-time=Temps maximal de traitement d'une r
 undertow.deployment.servlet.total-request-time=Temps de traitement total pour toutes les requ\u00EAtes
 undertow.deployment.servlet.request-count=Nombre pour toutes les requ\u00EAtes
 undertow.deployment.servlet.mappings=Mappages de servlet
-undertow.deployment.websocket=Websocket
 undertow.deployment.websocket.endpoint-class=Classe du point de terminaison
 undertow.deployment.websocket.path=Le chemin de d\u00E9ploiement du point de terminaison
 undertow.filter.mod-cluster=Un \u00E9quilibreur de charges frontal de mod-cluster
@@ -452,3 +467,8 @@ undertow.handler.mod-cluster.balancer.load-balancing-group=Un groupe d'\u00E9qui
 undertow.handler.mod-cluster.balancer.load-balancing-group.enable-nodes=Active tous les n\u0153uds d'un groupe d'\u00E9quilibrage des charges
 undertow.handler.mod-cluster.balancer.load-balancing-group.disable-nodes=D\u00E9sactive tous les n\u0153uds d'un groupe d'\u00E9quilibrage des charges
 undertow.handler.mod-cluster.balancer.load-balancing-group.stop-nodes=Stoppe tous les n\u0153uds d'un groupe d'\u00E9quilibrage des charges
+undertow.http-invoker=Les services d'invocateur HTTP qui permettent l'invocation de services bas\u00E9s HTTP cmme EJB et Naming
+undertow.http-invoker.add=Ajoute le serveur d'invocateur HTTP \u00E0 l'h\u00F4te
+undertow.http-invoker.remove=Supprime le service d'invocateur HTTP
+undertow.http-invoker.path=Le chemin sous lequel les services sont install\u00E9s
+undertow.http-invoker.http-authentication-factory=L'usine d'authentification HTTP \u00E0 utiliser pour l'authentification
