--- a/undertow/src/main/resources/org/wildfly/extension/undertow/logging/UndertowLogger.i18n_fr.properties
+++ b/undertow/src/main/resources/org/wildfly/extension/undertow/logging/UndertowLogger.i18n_fr.properties
@@ -112,3 +112,8 @@ requiredMechanismNotAvailable=Le m\u00E9canisme \u00AB\u00A0%s\u00A0\u00BB n'est
 noMechanismsSelected=Aucun m\u00E9canisme d'authentification n'a \u00E9t\u00E9 s\u00E9lectionn\u00E9.
 duplicateDefaultWebModuleMapping=Reproduire module web par d\u00E9faut \u00A0\u00AB\u00A0%s\u00A0\u00BB configur\u00E9 sur le serveur \u00AB\u00A0%s\u00A0\u00BB, et l'h\u00F4te \u00AB\u00A0%s\u00A0\u00BB
 predicateNotValid=Le pr\u00E9dicat %s n'\u00E9tait pas valide, le message \u00E9tait\u00A0\: %s
+missingKeyStoreEntry=L'alias de cl\u00E9 %s n'existe pas dans le key store configur\u00E9
+keyStoreEntryNotPrivate=L'entr\u00E9e de key store %s n'est pas une entr\u00E9e de cl\u00E9 priv\u00E9e
+missingCredential=L'alias d'identifiant %s n'existe pas dans le store d'identifiants configur\u00E9
+credentialNotClearPassword=L'identifiant %s n'est pas un mot de passe en texte clair
+configurationOptionIgnoredWhenUsingElytron=L'option de configuration [%s] est ignor\u00E9e quand on utilise un sous-syst\u00E8me Elytron
