--- a/ejb3/src/main/resources/org/jboss/as/ejb3/subsystem/LocalDescriptions_fr.properties
+++ b/ejb3/src/main/resources/org/jboss/as/ejb3/subsystem/LocalDescriptions_fr.properties
@@ -35,6 +35,7 @@ ejb3.default-security-domain=Le domaine de s\u00E9curit\u00E9 par d\u00E9faut qu
 ejb3.default-missing-method-permissions-deny-access=Si d\u00E9fini \u00E0 true, alors, les m\u00E9thodes sur un EJB ayant un domaine de s\u00E9curit\u00E9 sp\u00E9cifi\u00E9 ou ayant d'autres m\u00E9thodes avec m\u00E9tadonn\u00E9es de s\u00E9curit\u00E9 sera affect\u00E9 d'un @DenyAll \u00E0 moins que d'autres m\u00E9tadonn\u00E9es de s\u00E9curit\u00E9 soient pr\u00E9sentes
 ejb3.disable-default-ejb-permissions=Cet attribut d\u00E9pr\u00E9ci\u00E9 n'a aucun effet, et sera supprim\u00E9 dans une future version ; il ne sera plus d\u00E9fini \u00E0 la valeur \u00AB false\u00A0\u00BB
 ejb3.disable-default-ejb-permissions.deprecated=L'ajout de permissions par d\u00E9faut aux d\u00E9ploiements EJB n'est plus pris en charge et cet attribut de configuration sera supprim\u00E9 dans une future version.
+ejb3.enable-graceful-txn-shutdown=L'activation d'un arr\u00EAt progressif txn am\u00E8nera le serveur \u00E0 attendre la fin des transactions li\u00E9es \u00E0 EJB avant de s'arr\u00EAter. Pour cela, si le serveur ex\u00E9cute dans un cluster, le n\u0153ud de cluster mis en attente peut recevoir des requ\u00EAtes ejb en attendant la fin des transactions actives. Pour \u00E9viter cela, omettez cette balise. 
 ejb3.log-system-exceptions=Si sur true, alors toutes les exceptions syst\u00E8me EJB (non applicables) seront journalis\u00E9es. La spec EJB oblige \u00E0 ce comportement, mais ce n'est pas conseill\u00E9 car il r\u00E9sulte souvent en exceptions journalis\u00E9es \u00E0 deux reprises (une fois par l'EJB, et une fois par le code appelant).
 ejb3.allow-ejb-name-regex=Si sur true, alors, des expressions standards peuvent \u00EAtre utilis\u00E9es pour les liaisons d'intercepteurs afin de permettre aux intercepteurs d'\u00EAtre mapp\u00E9s \u00E0 tous les beans qui correspondent \u00E0 l'expression standard.
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-ejb3/org/jboss/as/ejb3/subsystem/LocalDescriptions, author croe@redhat.com
@@ -293,6 +294,10 @@ channel-creation-options.value=La valeur de l'option de cr\u00E9ation du canal d
 channel-creation-options.type=Le type d'option de cr\u00E9ation de canal
 channel-creation-options.add=Ajoute une option de cr\u00E9ation de canal distant EJB
 channel-creation-options.remove=Supprime une option de cr\u00E9ation de canal distant EJB
+remote-http=Service HTTP \u00E0 distance EJB3
+remote-http.add=Ajoute le service HTTP \u00E0 distance, permettant ainsi aux EJB d'\u00EAtre invoqu\u00E9es directement via HTTP
+remote-http.remove=Supprime le service HTTP distant
+remote-http.thread-pool-name=Le pool de thread qui doivent ex\u00E9cuter les requ\u00EAtes EJB. Si non d\u00E9finis, ils devront ex\u00E9cuter dans le web pool worker.
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-ejb3/org/jboss/as/ejb3/subsystem/LocalDescriptions, author croe@redhat.com
 async=Service Invocations Asynchrones d'EJB3
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-ejb3/org/jboss/as/ejb3/subsystem/LocalDescriptions, author croe@redhat.com
@@ -395,6 +400,11 @@ remoting-profile.add=Ajoute un profil distant
 remoting-profile.remove=Supprime un profil distant
 remoting-profile.exclude-local-receiver=Si d\u00E9fini, aucun receveur ne sera utilis\u00E9 pour ce profil
 remoting-profile.local-receiver-pass-by-value=Si d\u00E9fini, un receveur local passera les beans EJB par valeur
+remoting-profile.static-ejb-discovery=D\u00E9crit la config de d\u00E9couverte statique pour les EJB
+remoting-profile.static-ejb-discovery.app-name=Le nom de l'application EJB
+remoting-profile.static-ejb-discovery.module-name=Le nom du module EJB
+remoting-profile.static-ejb-discovery.distinct-name=Le nom distinct EJB
+remoting-profile.static-ejb-discovery.uri=L'URI \u00E0 utiliser pour les invocations \u00E0 ce module EJB
 remoting-ejb-receiver=Une r\u00E9f\u00E9rence EJB distante incluse dans le profil
 remoting-ejb-receiver.add=Ajoute une r\u00E9f\u00E9rence de receveur EJB distant au profil
 remoting-ejb-receiver.remove=Supprime une r\u00E9f\u00E9rence de receveur EJB distant au profil
@@ -409,6 +419,8 @@ application-security-domain.add=Ajoute un nouveau mappage de domaine de s\u00E9c
 application-security-domain.remove=Supprime le mappage de domaine de s\u00E9curit\u00E9 r\u00E9f\u00E9renc\u00E9 par une application
 application-security-domain.security-domain=Domaine de s\u00E9curit\u00E9 Elytron qui doit \u00EAtre utilis\u00E9 par les d\u00E9ploiements qui r\u00E9f\u00E9rencent le domaine de s\u00E9curit\u00E9 mapp\u00E9.
 application-security-domain.referencing-deployments=Les d\u00E9ploiements qui r\u00E9f\u00E9rencent ce mappage actuellement
+application-security-domain.enable-jacc=Activer l'autorisation par JACC
+application-security-domain.http-authentication-factory=L'usine d'authentification \u00E0 utiliser pour les invocations bas\u00E9es HTTP
 identity=D\u00E9finition d'identit\u00E9 pour la propagation d'identit\u00E9 de s\u00E9curit\u00E9
 identity.add=Ajoute la ressource d'identit\u00E9
 identity.remove=Supprime la ressource d'identit\u00E9
