--- a/mod_cluster/extension/src/main/resources/org/wildfly/extension/mod_cluster/LocalDescriptions_fr.properties
+++ b/mod_cluster/extension/src/main/resources/org/wildfly/extension/mod_cluster/LocalDescriptions_fr.properties
@@ -1,110 +1,9 @@
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author grossetieg
-modcluster=La configuration du sous-syst\u00E8me modcluster
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author grossetieg
-modcluster.add=Op\u00E9ration ajoutant le sous-syst\u00E8me modcluster
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author grossetieg
-modcluster.remove=Op\u00E9ration supprimant le sous-syst\u00E8me modcluster
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author grossetieg
-modcluster.configuration=La configuration courante du modcluster
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author grossetieg
-modcluster.proxy-host=Nom d'h\u00F4te du proxy (Apache httpd)
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author grossetieg
-modcluster.proxy-port=Port o\u00F9 le proxy (Apache httpd) re\u00E7oit le MCMP
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions
-modcluster.proxy-list=Liste des proxies sur lesquels le n\u0153ud est connect\u00E9. Format (nom d'h\u00F4te\:port) s\u00E9par\u00E9 par des virgules.
-modcluster.read-proxies-info=Envoi INFO \u00E0 httpd et affiche le r\u00E9sultat.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author grossetieg
-modcluster.proxies-info=R\u00E9sultat de la commande INFO.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author grossetieg
-modcluster.read-proxies-configuration=Envoi DUMP \u00E0 httpd et affiche le r\u00E9sultat.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author grossetieg
-modcluster.proxies-configuration=R\u00E9sultat de la commande DUMP.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author grossetieg
-modcluster.list-proxies=Lit la liste des httpd connect\u00E9s au n\u0153ud.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author grossetieg
-modcluster.add-proxy=Ajoute un proxy \u00E0 la liste des httpd connect\u00E9s au n\u0153ud.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.add-proxy.host=Nom d'h\u00F4te du proxy 
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.add-proxy.port=Nom du port du proxy
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author grossetieg
-modcluster.remove-proxy=Supprime un proxy de la liste des httpd connect\u00E9s au n\u0153ud.
-modcluster.remove-proxy.host=Nom d'h\u00F4te du proxy 
-modcluster.remove-proxy.port=Nom du port du proxy
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author grossetieg
-modcluster.refresh=Rafra\u00EEchit le n\u0153ud en envoyant un nouveau message CONFIG \u00E0 Apache httpd.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author grossetieg
-modcluster.reset=Restaure la connexion du n\u0153ud \u00E0 Apache httpd.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.virtualhost=Nom de l'h\u00F4te virtuel contenant le contexte.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.context=Contexte (like /myapp par exemple).
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.waittime=Dur\u00E9e maximum dont le modcluster a besoin pour l'op\u00E9ration STOP. En secondes. Valeur par d\u00E9faut 10s
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author grossetieg
-modcluster.enable-context=Informe Apache httpd que le contexte est pr\u00EAt \u00E0 recevoir des requ\u00EAtes.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.enable-context.virtualhost=Un h\u00F4te virtuel.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.enable-context.context=Contexte 
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author grossetieg
-modcluster.stop-context=Informe Apache httpd que le contexte ne peut pas traiter les requ\u00EAtes.
-modcluster.stop-context.virtualhost=Un h\u00F4te virtuel.
-modcluster.stop-context.context=Contexte (Context)
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.stop-context.waittime=D\u00E9lai d'attente
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author grossetieg
-modcluster.disable-context=Informe Apache httpd que le contexte ne peut pas traiter les nouvelles requ\u00EAtes.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.disable-context.virtualhost=h\u00F4te virtuel
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.disable-context.context=contexte 
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author grossetieg
-modcluster.enable=Informe Apache httpd que l'ensemble des contextes du n\u0153ud sont pr\u00EAts \u00E0 recevoir des requ\u00EAtes.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author grossetieg
-modcluster.stop=Informe Apache httpd que l'ensemble des contextes du n\u0153ud ne peuvent pas traiter les requ\u00EAtes.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.stop.waittime=D\u00E9lai d'attente
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author grossetieg
-modcluster.disable=Informe Apache httpd que l'ensemble des contextes du n\u0153ud ne peuvent pas traiter les nouvelles requ\u00EAtes.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.mod-cluster-config=D\u00E9finit la ressource de configuration
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.configuration.add=Ajoute une ressource de configuration
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.configuration.remove=Supprime une ressource de configuration
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.configuration.advertise-socket=Nom de la liaison de sockets \u00E0 utiliser pour le socket Advertise.
-modcluster.configuration.connector=Le nom de l'\u00E9couteur d'Undertow auquel le proxy inverse de mod_cluster se connectera.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author grossetieg
-modcluster.configuration.proxy-list=Liste des proxies, Format (nom d'h\u00F4te\:port) s\u00E9par\u00E9 par des virgules.
 modcluster.configuration.proxy-list.deprecated=L'attribut 'proxy-list' a \u00E9t\u00E9 d\u00E9pr\u00E9ci\u00E9 en faveur des proxys (liste de r\u00E9f\u00E9rences vers les liaisons de sockets sortantes)
-modcluster.configuration.proxies=Liste des proxys de mod_cluster \u00E0 enregistrer par outbound-socket-binding dans socket-binding-group. 
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
 modcluster.configuration.proxy-url=URL de base pour les requ\u00EAtes MCMP.
+modcluster.configuration.ssl-context=R\u00E9f\u00E9rence au contexte SSL qui va \u00EAtre utilis\u00E9 par mod_cluster.
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.configuration.advertise=Utiliser Advertise ou non.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.configuration.advertise-security-key=Cha\u00EEne qui contient la cl\u00E9 de s\u00E9curit\u00E9 de la logique Advertise.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions
-modcluster.configuration.excluded-contexts=Liste des contextes que mod_cluster doit ignorer, Format String s\u00E9par\u00E9 par des virgules.
-modcluster.configuration.auto-enable-contexts=Active les contextes m\u00EAme si d\u00E9sactiv\u00E9s en mod_cluster_manager (httpd).
-modcluster.configuration.session-draining-strategy=Strat\u00E9gie de drainage de session utilis\u00E9e en cours de suppression de d\u00E9ploiement d'une application web
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.configuration.stop-context-timeout=Dur\u00E9e maximum d'attente avant que le processus g\u00E8re les requ\u00EAtes en attente.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.configuration.socket-timeout=Dur\u00E9e du d\u00E9lai d'attente avant qu'httpd ne r\u00E9ponde \u00E0 un message MCMP.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.configuration.sticky-session=Utiliser les sticky sessions pour les requ\u00EAtes.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.configuration.sticky-session-remove=Supprime l'information de session sur le basculement.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.configuration.sticky-session-force=Ne fa\u00EEtes pas basculer une requ\u00EAte avec les informations de session.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.configuration.simple-load-provider=Simple fournisseur de chargement
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.configuration.dynamic-load-provider=Fournisseur de chargement dynamique
-modcluster.configuration.status-interval=Nombre de secondes pendant lesquelles un message de STATUT est envoy\u00E9 du serveur d'application au proxy inverse.
+modcluster.configuration.ping=Dur\u00E9e (en secondes) d'attente pour la r\u00E9ponse d'un pong \u00E0 un ping.
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
 modcluster.configuration.ssl=La configuration SSL dans la logique MCMP du client.
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
@@ -125,26 +24,6 @@ modcluster.configuration.ssl.protocol=Protocoles SSL activ\u00E9s.
 modcluster.configuration.ssl.ca-certificate-file=Autorit\u00E9 du certificat.
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author grossetieg
 modcluster.configuration.ssl.ca-revocation-url=Liste de r\u00E9vocation d'autorit\u00E9 des certificats.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.configuration.worker-timeout=Dur\u00E9e de d\u00E9lai d'attente dans httpd pour qu'un worker disponible puisse pr\u00E9c\u00E9der les requ\u00EAtes.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.configuration.max-attempts=Nombre maximum de tentatives de traitement de la requ\u00EAte idempotent.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.configuration.flush-packets=Active/d\u00E9sactive le vidage du paquet dans httpd.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.configuration.flush-wait=Dur\u00E9e d'attente avant de vider les packets dans httpd.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.configuration.ping=Dur\u00E9e (en secondes) d'attente pour la r\u00E9ponse d'un pong \u00E0 un ping.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.configuration.smax=Nombre maximum de connexions souples inactives en httpd
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.configuration.ttl=Dur\u00E9e de vie (en secondes) des connexions inactives au dessus de smax
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.configuration.node-timeout=d\u00E9lai d'attente (en secondes) pour les connexions de proxy vers un n\u0153ud.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.configuration.balancer=Le nom de l'\u00E9quilibreur des charges.
-# translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
-modcluster.configuration.load-balancing-group=loadBalancingGroup name.
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
 modcluster.configuration.add-metric=Ajoute un nouveau m\u00E9trique au fournisseur de l'\u00E9quilibreur des charges.
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-modcluster/org/jboss/as/modcluster/LocalDescriptions, author croe@redhat.com
