--- a/mod_cluster/extension/src/main/resources/org/wildfly/extension/mod_cluster/ModClusterLogger.i18n_fr.properties
+++ b/mod_cluster/extension/src/main/resources/org/wildfly/extension/mod_cluster/ModClusterLogger.i18n_fr.properties
@@ -12,3 +12,5 @@ sessionDrainingStrategyMustBeUndefinedOrDefault=session-draining-strategy (strat
 couldNotResolveProxyIpAddress=Aucune adresse IP n'a pu \u00EAtre r\u00E9solue pour l'h\u00F4te du proxy sp\u00E9cifi\u00E9.
 proxyListNotAllowedInCurrentModel=L'utilisation de la 'proxy-list' n'est pas autoris\u00E9e dans le mod\u00E8le actuel, et elle ne peut \u00EAtre utilis\u00E9e que pour supporter des esclaves plus anciens
 proxyListAttributeUsage=L'utilisation d'un seul attribut 'proxy-list' (pour supporter les esclaves EAP 6.x) ou d'attributs 'proxies' est autoris\u00E9e.
+excludedContextsWrongFormat='%s' n'est pas une valeur qui est valide pour 'excludedContexts'.
+bothElytronAndLegacySslContextDefined=Seul un attribut 'ssl-context' attribute ou une ressource 'ssl' peuvent \u00EAtre d\u00E9finis
