--- a/security/subsystem/src/main/resources/org/jboss/as/security/LocalDescriptions_fr.properties
+++ b/security/subsystem/src/main/resources/org/jboss/as/security/LocalDescriptions_fr.properties
@@ -6,6 +6,7 @@ security.add=Ajoute le sous-syst\u00E8me de s\u00E9curit\u00E9.
 security.remove=Supprime le sous-syst\u00E8me de s\u00E9curit\u00E9.
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-security/org/jboss/as/security/LocalDescriptions, author croe@redhat.com
 security.deep-copy-subject-mode=D\u00E9finit le mode de copie des sujets cr\u00E9\u00E9s par les gestionnaires de s\u00E9curit\u00E9 pour \u00EAtre des copies profondes qui font des copies des informations d'identification et sur les principaux si elles sont cl\u00F4nables. Doit \u00EAtre d\u00E9finie \u00E0 true si l'objet inclut un contenu mutable qui puisse \u00EAtre corrompu lorsque plusieurs threads ont la m\u00EAme identit\u00E9 et quand le cache de vidage/d\u00E9connexion qui supprime le sujet dans un thread aboutit \u00E0 ce que les r\u00E9f\u00E9rences de sujets affectent d'autres threads.
+security.initialize-jacc=Indique si ce sous-syst\u00E8me doit \u00EAtre charg\u00E9 d'initialiser les services JACC li\u00E9s.
 security.deprecated=Le sous-syst\u00E8me de s\u00E9curit\u00E9 est d\u00E9pr\u00E9ci\u00E9 et risque d'\u00EAtre supprim\u00E9, d'\u00EAtre r\u00E9vis\u00E9 enti\u00E8rement, ou d'\u00EAtre limit\u00E9 \u00E0 l'utilisation d'anciens serveurs en domaine g\u00E9r\u00E9 dans les prochaines versions.
 # translation auto-copied from project JBoss AS, version 7.1.x, document org.jboss.as/jboss-as-security/org/jboss/as/security/LocalDescriptions, author croe@redhat.com
 security-domain-children=Les domaines de s\u00E9curit\u00E9.
