--- a/webservices/server-integration/src/main/resources/org/jboss/as/webservices/logging/WSLogger.i18n_fr.properties
+++ b/webservices/server-integration/src/main/resources/org/jboss/as/webservices/logging/WSLogger.i18n_fr.properties
@@ -110,3 +110,4 @@ invalidPasswordType=Le mot de passe de format de cha\u00EEne est requis
 failedAuthorization=L'autorisation pour l'utilisateur %s a \u00E9chou\u00E9
 failedAuthentication=N'a pas pu authentifier le nom d'utilisateur %s\: nom d\u2019utilisateur / mot de passe incorrects
 failedAuthenticationWithException=Erreur lors de l'authentification du nom d'utilisateur %s. Message d'exception\u00A0\: %s
+endpointAlreadyStopped=Le point de terminaison cible %s est en cours de suppression de d\u00E9veloppement ou s'est arr\u00EAt\u00E9
