--- a/xts/src/main/resources/org/jboss/as/xts/logging/XtsAsLogger.i18n_fr.properties
+++ b/xts/src/main/resources/org/jboss/as/xts/logging/XtsAsLogger.i18n_fr.properties
@@ -8,3 +8,4 @@ xtsServiceFailedToStart=\u00C9chec du d\u00E9marrage du service XTS
 xtsServiceIsNotStarted=Service non d\u00E9marr\u00E9
 commonConfigurationUnavailable=Configuration standard non disponible
 coordinationContextDeserializationFailed=La d\u00E9s\u00E9rialisation du contexte de coordination a \u00E9chou\u00E9 
+rejectingCallBecauseNotPartOfXtsTx=Appel rejet\u00E9 car ne faisant pas partie d'aucune transaction XTS
